bugFix: z-index на картите

--- a/css/Application.scss
+++ b/css/Application.scss
@@ -2423,6 +2423,11 @@ div.location.public {
 	margin: 0;
 	padding: 0;
 }
+
+.pickermap{
+	z-index: 1;
+}
+
 /*край на стилове за локации*/
 
 .info-table ul {
